# gitbot

./: .gitignore  CLAUDE.md  HISTORY.md  LICENSE  README.md  claude_agent.py  generate_history.py  gitbot-run.sh  gitbot_run.py  github_fetcher.py  process_done_files.py  process_event_file.py  prompt_template.md  prompt_template_reviewer.md  pyproject.toml  requirements.txt  test_loop_avoidance.py
